# pineapi

./: .gitignore  .gitmodules  AGENTS.md  C:\Users\dev\.claude\projects\cc-memory\memory\MEMORY.md  C:\Users\dev\.claude\projects\cc-memory\memory\feedback_doc_style.md  README.md
deploy/pilot-home/: pilotdeck.yaml
docs/: agent-native-workflow.md  architecture.drawio  architecture.md  build-plan.md  model-gateway.md  pilotdeck-integration.md  pinea-architecture-interfaces.html
docs/interfaces/: README.md  agent-api.md  capability-api.md  openapi.yaml  pineastate-bus.md  runtime-contract.md  skill-contract.md  tob-overview.md
docs/solutions/: README.md
docs/solutions/gut-health/: customer-assets.md  integration-plan.md  phase1-design.md  requirements.md  scenarios.md
gateway/: .env.example  .gitignore  README.md  pyproject.toml
gateway/pinea_gateway/: __init__.py  __main__.py  app.py  auth.py  config.py  errors.py
gateway/pinea_gateway/backends/: base.py  ollama.py
gateway/pinea_gateway/routes/: chat.py  meta.py
gateway/tests/: conftest.py  test_chat_conformance.py
research/spikes/: _template.md  stt-gateway.md  tool-calling-localai.md  tool-calling.md  vllm-omni-box.md
research/spikes/tool-calling/: .gitignore  README.md  run.sh
research/spikes/tool-calling/fixtures/: source.txt
